[tool.poetry]
name = "okta-jwt-verifier"
version = "0.2.7"
description = "A Python library for OKTA JWT tokens validation"
authors = ["Okta"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32"
PyJWT = "2.8.0"
acachecontrol = "0.3.5"
retry2 = "^0.9.5"
aiohttp = "^3.10"
certifi = "2023.7.22"
urllib3 = "^1.26"
setuptools = "65.5.1"
cryptography = "^43"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
